# turnbinds-ramped

./: CMakeLists.txt
.github/workflows/: windows-build.yml
src/: common.hpp  turnbinds.cpp
